idek what i did im so tired

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,11 +13,12 @@ $button-primary-color-hover: #EEDEC5; // Light cream hover
 $first-color: hsl(34, 57%, 70%);     // Warm peach (replaces green)
 $first-color-alt: hsl(34, 47%, 85%); // Lighter peach
 $second-color: hsl(34, 94%, 87%);    // Light cream (unchanged)
+$deals-color: "brown";
 
 // Text & Backgrounds
 $title-color: hsl(24, 25%, 25%);     // Deep brown (for contrast)
 $text-color: hsl(24, 15%, 45%);      // Muted taupe
-$text-color-light: hsl(34, 20%, 75%); // Light warm gray
+$text-color-light: hsl(33, 6%, 68%); // Light warm gray
 
 // Layout Colors
 $body-color: hsl(40, 33%, 97%);      // Off-white cream
