--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1831,6 +1831,8 @@ main {
   grid-template-columns: 280px 1fr;
   gap: 2rem;
   margin-top: 2rem;
+  justify-content: start;
+  align-items: start;
 }
 
 .filters {
